Modified the mobile view of the payment overview page

--- a/web/src/features/bookingengine/imagegallery.css
+++ b/web/src/features/bookingengine/imagegallery.css
@@ -240,6 +240,10 @@
       width: 35px;
       height: 35px;
   }
+
+  .show-all-button {
+      display: none;
+  }
 }
 
 @media (min-width: 1201px) {
