--- a/web/src/pages/landingpage/landing.module.css
+++ b/web/src/pages/landingpage/landing.module.css
@@ -618,12 +618,12 @@ body {
 
 .client_text {
     border: 1px solid #003366;
-    padding: 2rem;
+    padding: 1.5rem;
     margin: 5px;
-    width: 25%;
+    width: 23.5%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between
 }
 
 .client_content {
@@ -646,11 +646,11 @@ body {
 
 .client_text .highlightText {
     color: #003366;
-    font-size: 5rem;
+    font-size: 2rem;
 }
 
 .client_text p {
-    font-size: 1rem;
+    font-size: 0.9rem;
     color: #333;
     margin: 0.5rem 0;
 }
