--- a/web/src/features/guestdashboard/guestmessages/styles/guestContactList.css
+++ b/web/src/features/guestdashboard/guestmessages/styles/guestContactList.css
@@ -49,9 +49,10 @@
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
-    min-height: 80px;
     border: 1px solid #dee2e6;
     width: 85%;
+    min-height: 7.5em;
+
 }
 
 .guest-contact-list-list-item:hover {
