--- a/web/src/features/hostdashboard/hostmessages/styles/hostContactList.css
+++ b/web/src/features/hostdashboard/hostmessages/styles/hostContactList.css
@@ -64,9 +64,9 @@
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #fff;
-    min-height: 80px;
     border: 1px solid #dee2e6;
     width: 85%;
+    min-height: 7.5em;
 }
 
 .contact-list-list-item:hover {
@@ -124,7 +124,7 @@
     background-color: red;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 0.1em 20px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 14px;
@@ -136,7 +136,7 @@
     background-color: green;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 0.1em 20px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 14px;
