--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -2,6 +2,9 @@
 @use "booking-engine/listing.scss";
 @use "booking-engine/bookingoverview.scss";
 @use "booking-engine/paymentConfirmPage.scss";
+@use "base/header.scss";
+@use "base/footer.scss";
+@use "base/MenuBar.scss";
 
 @font-face {
     font-family: "Kanit";
