Added login.scss to the scss folder

--- a/web/src/styles/sass/app.scss
+++ b/web/src/styles/sass/app.scss
@@ -2,9 +2,12 @@
 @use "booking-engine/listing.scss";
 @use "booking-engine/bookingoverview.scss";
 @use "booking-engine/paymentConfirmPage.scss";
+
 @use "base/header.scss";
 @use "base/footer.scss";
 @use "base/MenuBar.scss";
+
+@use "auth/login.scss";
 
 @font-face {
     font-family: "Kanit";
