--- a/web/src/features/hostonboarding/styles/styles.scss
+++ b/web/src/features/hostonboarding/styles/styles.scss
@@ -1,4 +1,4 @@
-.button-disabled {
-  background-color: grey;
-  cursor: not-allowed;
-}
+//.button-disabled {
+//  background-color: grey;
+//  cursor: not-allowed;
+//}
